# Warm-starting-TTT-E2E

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  pyproject.toml
docs/: 760M_PROTOCOL.md  ARTIFACTS.md  DATASETS.md  PAPER_RESULTS.md  REPRODUCIBILITY.md
paper/plots/: plot_manifest.json
scripts/: 38_babysit_prime_125m_ladder.py  39_prime_125m_ladder_controller.py  44_finish_pretrain_only.py  75_make_paper_plots.py
tests/: test_jax_checkpoint.py  test_jax_loss_parity.py  test_jax_runtime_smoke.py  test_warmstart_paper_figures.py
ttt/research/: paper_figures.py
