[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warmstart-ttt-e2e"
version = "0.1.0"
description = "Warm-starting TTT-E2E experiments for long-context language modeling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "chex>=0.1.87,<0.2",
    "einops>=0.8.0,<0.9",
    "einx>=0.3.0,<0.4",
    "equinox>=0.11.12,<0.12",
    "grain>=0.2.7,<0.3",
    "jaxtyping>=0.2.36,<0.3",
    "jax[cuda12]==0.5.3; platform_system == 'Linux'",
    "jax==0.5.3; platform_system != 'Linux'",
    "matplotlib>=3.9,<3.11",
    "numcodecs>=0.15.1,<0.16",
    "numpy>=2.0,<2.2",
    "optax>=0.2.4,<0.3",
    "orbax-checkpoint==0.11.13",
    "tensorstore>=0.1.71,<0.2",
    "tqdm>=4.67.1,<5",
    "wandb>=0.19,<0.21",
    "zarr>=3.0.4,<3.2",
    "huggingface-hub>=1.6.0",
    "nvidia-cublas-cu12==12.8.4.1; platform_system == 'Linux'",
    "nvidia-cuda-cupti-cu12==12.8.90; platform_system == 'Linux'",
    "nvidia-cuda-nvcc-cu12==12.8.93; platform_system == 'Linux'",
    "nvidia-cuda-runtime-cu12==12.8.90; platform_system == 'Linux'",
    "nvidia-cudnn-cu12==9.8.0.87; platform_system == 'Linux'",
    "nvidia-cufft-cu12==11.3.3.83; platform_system == 'Linux'",
    "nvidia-cusolver-cu12==11.7.3.90; platform_system == 'Linux'",
    "nvidia-cusparse-cu12==12.5.8.93; platform_system == 'Linux'",
    "nvidia-nccl-cu12==2.26.2.post1; platform_system == 'Linux'",
    "nvidia-nvjitlink-cu12==12.8.93; platform_system == 'Linux'",
]

[project.scripts]
train = "ttt.train:main"
warmstart-train = "ttt.train:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0,<5",
    "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
include = ["ttt", "ttt.*", "hydra_plugins", "hydra_plugins.*"]
